<resources>
    <string name="app_name" translatable="false">JustWeather</string>
    <string name="logo" translatable="false">logo</string>
    <string name="settings">Settings</string>
    <string name="openND" translatable="false">Open navigation drawer</string>
    <string name="closeND" translatable="false">Close navigation drawer</string>
    <string name="BASE_URL_OPEN_WEATHER_MAP" translatable="false">http://api.openweathermap.org/</string>
    <string name="fullDayNamePattern" translatable="false">EEEE, d MMMM</string>
    <string name="today">Today</string>

    <string name="celsiusSign" translatable="false">°C</string>
    <string name="fahrenheitSign" translatable="false">°F</string>
    <string name="kelvinSign" translatable="false">K</string>

    <string name="tempSign" translatable="false">°</string>
    <string name="tempMinMaxSplit" translatable="false">%1$d°/%2$d°</string>
    <string name="more_info">More info</string>
    <string name="weather_icon" translatable="false">weather_icon</string>
    <string name="itemico" translatable="false">itemIco</string>
    <string name="feels_like">Feels like</string>
    <string name="humidity">Humidity</string>
    <string name="percent" translatable="false">%</string>
    <string name="wind">Wind</string>
    <string name="m_per_sec">m/s</string>
    <string name="pressure">Pressure</string>
    <string name="h_pa">hPa</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="uv_index">UV index</string>
    <string name="hourly">Hourly</string>
    <string name="n">North</string>
    <string name="ne">Northeast</string>
    <string name="e">East</string>
    <string name="se">Southeast</string>
    <string name="s">South</string>
    <string name="sw">Southwest</string>
    <string name="w">West</string>
    <string name="nw">Northwest</string>
    <string name="daily">Daily</string>
    <string name="add_city">Add city</string>
    <string name="city_name">City name</string>
    <string name="locationDialogMessage">You can’t see weather on your location, without allowing this app to see it. If you don’t want to, you can add city manually by typing it.</string>
    <string name="typeCity">Type City</string>
    <string name="useLocation">Use Location</string>
    <string name="undo">Undo</string>
    <string name="snackbarUndoText">Undo removing %1$s from your list?</string>
    <string name="deleteLastCity">You can\'t delete all cities</string>
    <string name="snackbarCurrentCity">You can\'t delete current city.</string>
    <string name="temperature_key" translatable="false">temperature</string>
    <string name="temperature">Temperature</string>
    <string name="speed_key" translatable="false">speed</string>
    <string name="speed">Speed</string>
    <string name="pressure_key" translatable="false">pressure</string>
    <string name="githubrepo_key" translatable="false">githubrepo</string>
    <string name="githubrepo">GitHub Repository</string>
    <string name="author_linkedin_key" translatable="false">authorlinkedin</string>
    <string name="author_linkedin">Author\'s LinkedIn</string>
    <string name="other_settings">Other Settings</string>
    <string name="language">Language</string>
    <string name="language_key" translatable="false">language</string>
    <string name="theme">Theme</string>
    <string name="temp_dialog">Select temperature unit you want to use</string>
    <string name="speed_dialog">Select speed unit you want to use</string>
    <string name="pressure_dialog">Select pressure unit you want to use</string>
    <string name="lang_dialog">Select language you want to use</string>
    <string name="aboutTheApp">About the app</string>
    <string name="scales">Scales</string>
    <string name="theme_key" translatable="false">theme</string>
</resources>