<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="oneCallOWMModel"
            type="com.denbondd.justweather.models.OneCallOWMModel" />

        <variable
            name="date"
            type="long" />

        <variable
            name="cityName"
            type="String" />

        <variable
            name="weatherIcon"
            type="android.graphics.drawable.Drawable" />

        <import
            alias="timeExt"
            type="com.denbondd.justweather.util.TimeExtensions" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@drawable/main_background">

        <TextView
            android:id="@+id/txtCurrentTemp"
            style="@style/txtRegular64sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@{Long.toString(Math.round(oneCallOWMModel.current.temp)) + @string/celsiusSign}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            tools:text="-8°C" />

        <TextView
            android:id="@+id/txtSelectedDate"
            style="@style/txtLight16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{timeExt.convertMillisToDate(date, @string/fullDayNamePattern)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Tuesday, 24 December" />

        <TextView
            android:id="@+id/txtTodayOrElse"
            style="@style/txtLight16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/today"
            app:layout_constraintEnd_toEndOf="@+id/txtSelectedDate"
            app:layout_constraintStart_toStartOf="@+id/txtSelectedDate"
            app:layout_constraintTop_toBottomOf="@+id/txtSelectedDate" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="48dp"
            android:src="@{weatherIcon}"
            android:tint="@color/mainGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCityName"
            tools:srcCompat="@drawable/ic_weather1d"
            android:contentDescription="@string/weather_icon" />

        <TextView
            android:id="@+id/txtCityName"
            style="@style/txtRegular26sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@{cityName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTodayOrElse"
            tools:text="Kharkiv" />

        <TextView
            android:id="@+id/txtMinMaxTemp"
            style="@style/txtRegular24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.format(@string/tempMinMaxSplit, Math.round(oneCallOWMModel.daily.get(0).temp.min), Math.round(oneCallOWMModel.daily.get(0).temp.max))}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCurrentTemp"
            tools:text="-10°/-6°" />

        <TextView
            android:id="@+id/textView3"
            style="@style/txtRegular18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="50dp"
            android:text="@string/more_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView4"
            style="@style/txtRegular24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@{oneCallOWMModel.current.weather.get(0).main}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMinMaxTemp"
            tools:text="Sunny" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>